--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Graphic Design Company">
-  	<meta name="keywords" content="Joel,Arrey,JMD,jmd,joel media design,www.joelmediadesign.tk,Bamenda,Cameroon,about joel arrey, ">
+    <meta name="description" content="About Joel Arrey and the services he offers at Joel Media Design.">
+  	<meta name="keywords" content="About Joel Arrey, jmd, joel media design,Bamenda Cameroon,about, graphic designer, joeloedinho">
   	<meta name="author" content="Joel Arrey">
 
     <link rel="stylesheet" href="about.css">
-    <link rel="icon" type="image.png" size="32x32" href="logo/jmd-black.png">
+    <link rel="shortcut icon" type="image/png" sizes="867x626" href="logo/icon.png">
 
     <!-- Font awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -50,17 +50,17 @@
     
   	<nav class="navbar navbar-expand-lg navbar-dark  fixed-top" style="background: #0f0f0f; font-size: 18px">
     <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="logo/jmd-white.png"  width="150"></a>
+        <a href="index.html" class="navbar-brand"><img src="logo/logo.png"  width="150"></a>
         <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbar9">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse" id="navbar9" style="background: #0f0f0f; padding: 16px">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
+                    <a class="nav-link " href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link active" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="merch.html">Merch</a>
@@ -76,7 +76,7 @@
 	<header class="container-header" id="top">
 
 		<section class="welcome-sec">
-			
+			ABOUT ME
 		</section> 
 	</header>
 
@@ -207,7 +207,7 @@
 			<div class="col-md">
 						<a target="_blank" href="https://facebook.com/joeloedinho"><i class="fab fa-facebook-f fa-2x icon"> </i></a>
 						<a target="_blank" href="https://twitter.com/joeloedinho"><i class="fab fa-twitter fa-2x icon"> </i></a>
-						<a target="_blank" href="https://twitter.com/joeloedinho"><i class="fab fa-instagram fa-2x icon"> </i></a>
+						<a target="_blank" href="index.html"><i class="fab fa-instagram fa-2x icon"> </i></a>
 						<a target="_blank" href="https://github.com/joeloedinho"><i class="fab fa-github fa-2x icon"> </i></a>
 						<a target="_blank" href="https://behance.net/joelarrey"><i class="fab fa-behance fa-2x icon"> </i></a>
 						<a target="_blank" href="https://dribbble.com/joeloedinho"><i class="fab fa-dribbble  fa-2x icon"> </i></a>
