--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Graphic Design Company">
-  	<meta name="keywords" content="Joel,Arrey,JMD,jmd,joel media design,www.joelmediadesign.tk,Bamenda,Cameroon ">
+    <meta name="description" content="Professional logo and brad/identity design service of all business around the world">
+  	<meta name="keywords" content="Joel Arrey, jmd, joel media design, www.joelmediadesign.tk, graphic designer bamenda cameroon, logo designer cameroon, joeloedinho">
   	<meta name="author" content="Joel Arrey">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo/jmd-black.png">
+    <link rel="shortcut icon" type="image/png" sizes="867x626" href="logo/icon.png">
+   
     <!-- Font awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<meta property="og:url" content="https://joelmediadesign.tk/" />
@@ -45,7 +46,7 @@
     
   	<nav class="navbar navbar-expand-lg navbar-dark  fixed-top" style="background: #0f0f0f; font-size: 18px">
     <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="logo/jmd-white.png"  width="150"></a>
+        <a href="index.html" class="navbar-brand"><img src="logo/logo.png"  width="150"></a>
         <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbar9">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -72,7 +73,7 @@
 	<header class="container-header">
 
 		<section class="welcome-sec" id="top">
-			
+			JOEL MEDIA DESIGN
 		</section> 
 
 	</header>
@@ -289,7 +290,7 @@
 			<div class="col-md">
 						<a target="_blank" href="https://facebook.com/joeloedinho"><i class="fab fa-facebook-f fa-2x icon"> </i></a>
 						<a target="_blank" href="https://twitter.com/joeloedinho"><i class="fab fa-twitter fa-2x icon"> </i></a>
-						<a target="_blank" href="https://twitter.com/joeloedinho"><i class="fab fa-instagram fa-2x icon"> </i></a>
+						<a target="_blank" href="index.html"><i class="fab fa-instagram fa-2x icon"> </i></a>
 						<a target="_blank" href="https://github.com/joeloedinho"><i class="fab fa-github fa-2x icon"> </i></a>
 						<a target="_blank" href="https://facebook.com/joeloedinho"><i class="fab fa-behance fa-2x icon"> </i></a>
 						<a target="_blank" href="https://facebook.com/joeloedinho"><i class="fab fa-dribbble  fa-2x icon"> </i></a>
