--- a/about.html
+++ b/about.html
@@ -73,12 +73,11 @@
     </div>
 </nav>
 
-	<header class="container-header" id="top">
-
-		<section class="welcome-sec">
-			ABOUT ME
-		</section> 
-	</header>
+	<header class="container-header">
+    <section class="content-header">
+      ABOUT ME
+    </section>
+  </header>
 
 	<div class="container-fluid about-sec" style="background: #f0f0f0f0">
 		<div class="container" style="background: #f7f7f7f7; padding-top: 5%">
