--- a/index.html
+++ b/index.html
@@ -71,12 +71,10 @@
 
 
 	<header class="container-header">
-
-		<section class="welcome-sec" id="top">
-			JOEL MEDIA DESIGN
-		</section> 
-
-	</header>
+    <section class="content-header">
+      JOEL MEDIA DESIGN
+    </section>
+  </header>
 
 	<!-- The process sec -->
 	<div class="container-fluid" id="the-process">
