--- a/merch.html
+++ b/merch.html
@@ -70,12 +70,10 @@
 </nav>
 
 	<header class="container-header">
-
-		<section class="welcome-sec" id="top">
-			3 BUTTERFLIES
-		</section> 
-
-	</header>
+    <section class="content-header">
+      3 BUTTERFLIES
+    </section>
+  </header>
 
 	<!-- Porfolio -->
 <div class="container-fluid" id="portfolio-sec" style="background: #f0f0f0f0">
@@ -113,70 +111,6 @@
 			    </div>
 			</div>
 		</div>
-
-		<div class="row">
-			<div class="col-md portfolio-img">
-			    <div class="hovereffect">
-			        <img class="img-responsive" src="mock up.png" width="100%" alt="">
-			        <div class="overlay">
-			           <h2>Play Music App</h2>
-			           <p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$30</span><br>BUY</p>
-			        </div>
-			    </div>
-			</div>
-
-			<div class="col-md portfolio-img">
-			    <div class="hovereffect">
-			        <img class="img-responsive" src="mock up.png" width="100%" alt="">
-			        <div class="overlay">
-			           <h2>Play Music App</h2>
-			           <p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$30</span><br>BUY</p>
-			        </div>
-			    </div>
-			</div>
-
-			<div class="col-md portfolio-img">
-			    <div class="hovereffect">
-			        <img class="img-responsive" src="mock up.png" width="100%" alt="">
-			        <div class="overlay">
-			           <h2>Play Music App</h2>
-			           <p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$30</span><br>BUY</p>
-			        </div>
-			    </div>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md portfolio-img">
-			    <div class="hovereffect">
-			        <img class="img-responsive" src="mock up.png" width="100%" alt="">
-			        <div class="overlay">
-			           <h2>Play Music App</h2>
-			           <p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$30</span><br>BUY</p>
-			        </div>
-			    </div>
-			</div>
-
-			<div class="col-md portfolio-img">
-			    <div class="hovereffect">
-			        <img class="img-responsive" src="mock up.png" width="100%" alt="">
-			        <div class="overlay">
-			           <h2>Play Music App</h2>
-			           <p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$30</span><br>BUY</p>
-			        </div>
-			    </div>
-			</div>
-
-			<div class="col-md portfolio-img">
-			    <div class="hovereffect">
-			        <img class="img-responsive" src="mock up.png" width="100%" alt="">
-			        <div class="overlay">
-			           <h2>Play Music App</h2>
-			           <p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$30</span><br>BUY</p>
-			        </div>
-			    </div>
-			</div>
-		</div>	
 	</div>
 </div>
 <div class="footer">
