--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<img src="images/logo1-circle.png" id="logo1-circle" width="200px">
 					<h2 id='process-first-header'>.01</h2>
 					<h2 id='process-second-header'>Submit A Brief</h2>
-					<div class="container" id="process-content" style="text-align: center;">Choose a pricing pakage and fill out a brief questionnaire and telling me about your design needs.</div>
+					<div class="container" id="process-content" style="text-align: center;">Choose a pricing pakage and fill out a brief questionnaire telling me about your design needs.</div>
 				</div>
 
 				<div class="col-md">
