--- a/merch.html
+++ b/merch.html
@@ -134,7 +134,7 @@
 				</div>
 
 				<div class="col-md">
-					<a href="#"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Hire Me</button></a>
+					<a href="https://forms.gle/4yi7DjYnNyFUzoTY8"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Request a logo</button></a>
 				</div>
 
 				<div class="col-md">
