--- a/merch.html
+++ b/merch.html
@@ -86,7 +86,7 @@
 			        <img class="img-responsive" src="images/tshirt-3.jpg" width="100%" alt="">
 			        <div class="overlay">
 			           <h2>God is a designer</h2>
-			           <p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$30</span><br>BUY</p>
+			           <a href="https://forms.gle/RjRa7qMj1EQBPFqo8"><p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$9</span><br>Order Yours</p></a>
 			        </div>
 			    </div>
 			</div>
@@ -96,7 +96,7 @@
 			        <img class="img-responsive" src="images/tshirt-2.jpg" width="100%" alt="">
 			        <div class="overlay">
 			           <h2>Rainbaw Colour</h2>
-			           <p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$30</span><br>BUY</p>
+			           <a href="https://forms.gle/RjRa7qMj1EQBPFqo8" style="color: white"><p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$9</span><br>Order Yours</p></a>
 			        </div>
 			    </div>
 			</div>
@@ -106,7 +106,7 @@
 			        <img class="img-responsive" src="images/tshirt-1.jpg" width="100%" alt="">
 			        <div class="overlay">
 			           <h2>Peuff</h2>
-			           <p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$30</span><br>BUY</p>
+			           <a href="https://forms.gle/RjRa7qMj1EQBPFqo8" style="color: white"><p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$9</span><br>Order Yours</p></a>
 			        </div>
 			    </div>
 			</div>
@@ -134,7 +134,7 @@
 				</div>
 
 				<div class="col-md">
-					<a href="https://forms.gle/4yi7DjYnNyFUzoTY8"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Request a logo</button></a>
+					<a href="#"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Hire Me</button></a>
 				</div>
 
 				<div class="col-md">
