--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Professional logo and brad/identity design service of all business around the world">
+    <meta name="description" content="Professional logo and brand/identity design service of all business around the world">
   	<meta name="keywords" content="Joel Arrey, jmd, joel media design, www.joelmediadesign.tk, graphic designer bamenda cameroon, logo designer cameroon, joeloedinho">
   	<meta name="author" content="Joel Arrey">
 
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/png" sizes="867x626" href="logo/icon.png">
+	  
+	  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143067097-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-143067097-1');
+</script>
    
     <!-- Font awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
