--- a/merch.html
+++ b/merch.html
@@ -5,21 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Joel Arrey's clothing brand you can order your t-shirt designs here">
-  	<meta name="keywords" content="3 Butterflies, Joel Arrey clothing brand, Joel Arrey t-shirts, jmd tshirts, jmd, joel media design, Bamenda Cameroon, t-shirts Bamenda, joeloedinho ">
+  	<meta name="keywords" content="3 Butterfly, Joel Arrey t-shirts, 3 butterfly t-shirts, joel media design tshirts, jmd, joel media design, Bamenda Cameroon, t-shirt design Bamenda, joeloedinho ">
   	<meta name="author" content="Joel Arrey">
 
     <link rel="stylesheet" href="merch.css">
-    <link rel="shortcut icon" type="image/png" sizes="867x626" href="logo/icon.png">
-	  
-	  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143067097-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-143067097-1');
-</script>
+    <link rel="shortcut icon" type="image/png" sizes="867x626" href="logo/3-butterfly logo.png">
 
     <!-- Font awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -49,7 +39,7 @@
     <!--Bootstrap4 links-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>JMD - Merch</title>
+    <title>3 Butterfly</title>
   </head>
 
   	<body>
@@ -81,7 +71,7 @@
 
 	<header class="container-header">
     <section class="content-header">
-      3 BUTTERFLIES
+      3 BUTTERFLY
     </section>
   </header>
 
@@ -93,30 +83,30 @@
 		<div class="row">
 			<div class="col-md portfolio-img">
 			    <div class="hovereffect">
-			        <img class="img-responsive" src="images/tshirt-3.jpg" width="100%" alt="">
+			        <img class="img-responsive" src="images/1.png" width="100%" alt="big smoke">
 			        <div class="overlay">
-			           <h2>God is a designer</h2>
-			           <a href="https://forms.gle/RjRa7qMj1EQBPFqo8"><p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$9</span><br>Order Yours</p></a>
+			           <h2>Big Smoke T-shirt</h2>
+			           <a href="https://teespring.com/wear-big-smoke"><p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$25</span><br>Order Yours</p></a>
 			        </div>
 			    </div>
 			</div>
 
 			<div class="col-md portfolio-img">
 			    <div class="hovereffect">
-			        <img class="img-responsive" src="images/tshirt-2.jpg" width="100%" alt="">
+			        <img class="img-responsive" src="images/2.png" width="100%" alt="feel free">
 			        <div class="overlay">
-			           <h2>Rainbaw Colour</h2>
-			           <a href="https://forms.gle/RjRa7qMj1EQBPFqo8" style="color: white"><p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$9</span><br>Order Yours</p></a>
+			           <h2>Feel Free t-shirt</h2>
+			           <a href="https://teespring.com/feel-free-3butterful" style="color: white"><p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$25</span><br>Order Yours</p></a>
 			        </div>
 			    </div>
 			</div>
 
 			<div class="col-md portfolio-img">
 			    <div class="hovereffect">
-			        <img class="img-responsive" src="images/tshirt-1.jpg" width="100%" alt="">
+			        <img class="img-responsive" src="images/3.png" width="100%" alt="big smoke">
 			        <div class="overlay">
-			           <h2>Peuff</h2>
-			           <a href="https://forms.gle/RjRa7qMj1EQBPFqo8" style="color: white"><p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$9</span><br>Order Yours</p></a>
+			           <h2>Big Smoke T-shirt</h2>
+			           <a href="https://teespring.com/wear-big-smoke" style="color: white"><p class="info" href="#" style="color: #f0f0f0"><span style="color: #2196f3; font-family: futura medium">$25</span><br>Order Yours</p></a>
 			        </div>
 			    </div>
 			</div>
@@ -144,7 +134,7 @@
 				</div>
 
 				<div class="col-md">
-					<a href="#"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Hire Me</button></a>
+					<a href="https://forms.gle/1ehy8dGUsMYcLLef7"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Hire Me</button></a>
 				</div>
 
 				<div class="col-md">
