--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
   	<meta name="author" content="Joel Arrey">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" sizes="867x626" href="logo/icon.png">
-	  
-	  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143067097-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-143067097-1');
-</script>
+    <link rel="shortcut icon" type="image/png" sizes="100%" href="logo/logo.png">
    
     <!-- Font awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -56,7 +46,7 @@
     
   	<nav class="navbar navbar-expand-lg navbar-dark  fixed-top" style="background: #0f0f0f; font-size: 18px">
     <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="logo/logo.png"  width="150"></a>
+        <a href="index.html" class="navbar-brand"><img class="logo" width="10%" src="logo/logo.png" style="margin-top: 8px; padding-bottom: 8px"></a>
         <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbar9">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -98,28 +88,28 @@
 					<img src="images/logo1-circle.png" id="logo1-circle" width="200px">
 					<h2 id='process-first-header'>.01</h2>
 					<h2 id='process-second-header'>Submit A Brief</h2>
-					<div class="container" id="process-content" style="text-align: center;">Choose a pricing pakage and fill out a brief questionnaire telling me about your design needs.</div>
+					<div class="container" id="process-content" style="text-align: center;">Choose a pricing package and fill out a brief questionnaire  telling me about your design needs</div>
 				</div>
 
 				<div class="col-md">
 					<img src="images/receive-circle.png" id="Receive design" width="200px">
 					<h2 id='process-first-header'>.02</h2>
 					<h2 id='process-second-header'>Receive Your Designs</h2>
-					<div class="container" id="process-content" style="text-align: center;">Receive a variety of design ideas to choose from 2-3 days of placing your order needs.</div>
+					<div class="container" id="process-content" style="text-align: center;">Receive a variety of design ideas to choose from 2-3 days of placing your design brief.</div>
 				</div>
 
 				<div class="col-md">
 					<img src="images/revision-circle.png" id="revision" width="200px">
 					<h2 id='process-first-header'>.03</h2>
 					<h2 id='process-second-header'>Revisions</h2>
-					<div class="container" id="process-content" style="text-align: center;">Request changess to colours, styles, icons, fonts, or any other aspect, until the desgn is perfected to your liking.</div>
+					<div class="container" id="process-content" style="text-align: center;">Request changes to colours, styles, icons, fonts, or any other aspect until the design is perfected to your liking.</div>
 				</div>
 
 				<div class="col-md">
 					<img src="images/logo-circle.png" id="logo-circle" width="200px">
 					<h2 id='process-first-header'>.04</h2>
 					<h2 id='process-second-header'>Your New Logo</h2>
-					<div class="container" id="process-content" style="text-align: center;">Your new, finely-turned logo will be pakaged up and delivered to you in a variety of high-resolution formats & editable source files</div>
+					<div class="container" id="process-content" style="text-align: center;">Your new, finely-turned logo will be packaged up and delivered to you in a variety of high-resolution formats & editable source files</div>
 				</div>	
 			</div>
 		</div>
@@ -282,7 +272,7 @@
 				</div>
 
 				<div class="col-md">
-					<a href="https://forms.gle/4yi7DjYnNyFUzoTY8"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Request a logo</button></a>
+					<a href="#"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Request design</button></a>
 				</div>
 
 				<div class="col-md">
@@ -298,7 +288,7 @@
 			<div class="col-md">
 						<a target="_blank" href="https://facebook.com/joeloedinho"><i class="fab fa-facebook-f fa-2x icon"> </i></a>
 						<a target="_blank" href="https://twitter.com/joeloedinho"><i class="fab fa-twitter fa-2x icon"> </i></a>
-						<a target="_blank" href="index.html"><i class="fab fa-instagram fa-2x icon"> </i></a>
+						<a target="_blank" href="https://instagram.com/joeloedinho"><i class="fab fa-instagram fa-2x icon"> </i></a>
 						<a target="_blank" href="https://github.com/joeloedinho"><i class="fab fa-github fa-2x icon"> </i></a>
 						<a target="_blank" href="https://facebook.com/joeloedinho"><i class="fab fa-behance fa-2x icon"> </i></a>
 						<a target="_blank" href="https://facebook.com/joeloedinho"><i class="fab fa-dribbble  fa-2x icon"> </i></a>
