--- a/merch.html
+++ b/merch.html
@@ -46,7 +46,7 @@
     
   	<nav class="navbar navbar-expand-lg navbar-dark  fixed-top" style="background: #0f0f0f; font-size: 18px">
     <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="logo/logo.png"  width="150"></a>
+        <a href="index.html" class="navbar-brand"><img class="logo" width="10%" src="logo/logo.png" style="margin-top: 8px; padding-bottom: 8px"></a>
         <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbar9">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -134,7 +134,7 @@
 				</div>
 
 				<div class="col-md">
-					<a href="https://forms.gle/1ehy8dGUsMYcLLef7"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Hire Me</button></a>
+					<a href="https://forms.gle/1ehy8dGUsMYcLLef7"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Request design</button></a>
 				</div>
 
 				<div class="col-md">
@@ -150,7 +150,7 @@
 			<div class="col-md">
 						<a target="_blank" href="https://facebook.com/joeloedinho"><i class="fab fa-facebook-f fa-2x icon"> </i></a>
 						<a target="_blank" href="https://twitter.com/joeloedinho"><i class="fab fa-twitter fa-2x icon"> </i></a>
-						<a target="_blank" href="index.html"><i class="fab fa-instagram fa-2x icon"> </i></a>
+						<a target="_blank" href="https://instagram.com/joeloedinho"><i class="fab fa-instagram fa-2x icon"> </i></a>
 						<a target="_blank" href="https://github.com/joeloedinho"><i class="fab fa-github fa-2x icon"> </i></a>
 						<a target="_blank" href="https://behance.net/joelarrey"><i class="fab fa-behance fa-2x icon"> </i></a>
 						<a target="_blank" href="https://dribbble.com/joeloedinho"><i class="fab fa-dribbble  fa-2x icon"> </i></a>
