--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
 				</div>
 
 				<div class="col-md">
-					<a href="#"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Request design</button></a>
+					<a href="https://forms.gle/ELLQ7PMzonQVwzmg9"><button type="button" class="btn btn-info btn-lg" style="background: #2186f3; margin: 8px; margin-top: 50px; border-radius: 0px">Request design</button></a>
 				</div>
 
 				<div class="col-md">
